--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,22 +26,26 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  font-family: Georgia, serif ;
+  //font-family: Georgia, serif ;
 }
 html, body {
+
+	padding: 0px;
+  margin: 0;
+}
+
+body {
+  margin: 0;
+  min-height:auto;
+
+  padding-top: 0px;
+  
+  overflow-x: hidden;
   background-image: url("./media/millslakermnp.png");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
-	padding: 0px;
-}
-
-body {
-  min-height:auto;
-  margin-bottom: 20px;
-  padding-top: 0px;
-  padding-bottom: 10px;
   background-color: #ffffff;
   font-family: Georgia, serif;
   -webkit-font-smoothing: antialiased;
@@ -51,8 +55,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas,
     monospace;
-  color:rgba(0, 255, 0, 0.795);
-  font-size: 16px;
+  color:rgb(255, 0, 0);
+  font-size: 18px;
 }
 
 .symbol.symbol-45 > svg {
